--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
             android:exported="false" />
         <activity
             android:name=".NewSynthesisActivity"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustPan"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
